--- a/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
@@ -9,5 +9,6 @@
   "iti76:2.3": "Galvodamas: „Tebūnu gyriamas,” – išminčius saugo dorovę. Galvodamas: „Tepraturtėju,” – išminčius saugo dorovę. Galvodamas: „Po kūno žūties, po mirties teatgimstu geroje vietoje, danguje,” – išminčius saugo dorovę. ",
   "iti76:2.4": "„Išminčius, vienuoliai, saugo dorovę siekdamas šių trijų rūšių laimės. ",
   "iti76:2.5": "Apie tai Palaimintasis kalbėjo. ",
-  "iti76:2.6": "Taip pasakyta apie tai: "
+  "iti76:2.6": "Taip pasakyta apie tai: ",
+  "iti76:3.1": "„Išmaningasis saugo dorovę "
 }
