--- a/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
@@ -10,5 +10,6 @@
   "iti76:2.4": "„Išminčius, vienuoliai, saugo dorovę siekdamas šių trijų rūšių laimės. ",
   "iti76:2.5": "Apie tai Palaimintasis kalbėjo. ",
   "iti76:2.6": "Taip pasakyta apie tai: ",
-  "iti76:3.1": "„Išmaningasis saugo dorovę "
+  "iti76:3.1": "„Išmaningasis saugo dorovę ",
+  "iti76:3.2": "siekdamas trijų rūšių laimės: "
 }
