--- a/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
@@ -14,5 +14,6 @@
   "iti76:3.2": "siekdamas trijų rūšių laimės: ",
   "iti76:3.3": "pagyrų, pralobimo ir ",
   "iti76:3.4": "džiaugsmo danguje vėliau. ",
-  "iti76:4.1": "Net jei kas ir nedaro blogo, "
+  "iti76:4.1": "Net jei kas ir nedaro blogo, ",
+  "iti76:4.2": "bet draugauja su tuo, kuris daro, "
 }
