--- a/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
@@ -17,5 +17,6 @@
   "iti76:4.1": "Net jei kas ir nedaro blogo, ",
   "iti76:4.2": "bet draugauja su tuo, kuris daro, ",
   "iti76:4.3": "jį įtaria bloguose darbuose, ",
-  "iti76:4.4": "ir auga jo prasta reputacija. "
+  "iti76:4.4": "ir auga jo prasta reputacija. ",
+  "iti76:5.1": "Kokius draugus jis turi, "
 }
