--- a/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
@@ -18,5 +18,6 @@
   "iti76:4.2": "bet draugauja su tuo, kuris daro, ",
   "iti76:4.3": "jį įtaria bloguose darbuose, ",
   "iti76:4.4": "ir auga jo prasta reputacija. ",
-  "iti76:5.1": "Kokius draugus jis turi, "
+  "iti76:5.1": "Kokius draugus jis turi, ",
+  "iti76:5.2": "su kuo bendrauja, "
 }
