--- a/translation/it/soma/sutta/kn/iti/vagga10/iti98_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti98_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti98:2.1": "Ci sono due tipi di doni: ",
   "iti98:2.2": "un dono materiale e il dono del Dhamma. ",
-  "iti98:2.3": "Tra questi due doni il migliore è il dono di Dhamma. ",
+  "iti98:2.3": "Tra questi due doni il migliore è il dono del Dhamma. ",
   "iti98:3.1": "Ci sono due tipi di condivisioni: ",
   "iti98:3.2": "condivisioni materiali e condivisioni di Dhamma. ",
   "iti98:3.3": "* ",
