--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
@@ -1,3 +1,4 @@
 {
-  "thig8.1:0.1": "Стихи старших монахинь 8.1 "
+  "thig8.1:0.1": "Стихи старших монахинь 8.1 ",
+  "thig8.1:0.2": "Восемь строф "
 }
