--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
@@ -4,5 +4,6 @@
   "thig8.1:0.3": "Сисупачала Тхери ",
   "thig8.1:1.1": "Бхиккхуни, добродетели исполненная, ",
   "thig8.1:1.2": "Со способностями хорошо взращёнными, ",
-  "thig8.1:1.3": "Достигнет состояния покоя, "
+  "thig8.1:1.3": "Достигнет состояния покоя, ",
+  "thig8.1:1.4": "Неотразимого, сладостного. "
 }
