--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
@@ -2,7 +2,7 @@
   "thig8.1:0.1": "Стихи старших монахинь 8.1 ",
   "thig8.1:0.2": "Восемь строф ",
   "thig8.1:0.3": "Сисупачала Тхери ",
-  "thig8.1:1.1": "Бхиккхуни, добродетели исполненная, ",
+  "thig8.1:1.1": "«Бхиккхуни, добродетели исполненная, ",
   "thig8.1:1.2": "Со способностями хорошо взращёнными, ",
   "thig8.1:1.3": "Достигнет состояния покоя, ",
   "thig8.1:1.4": "Неотразимого, сладостного. "
