--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
@@ -16,5 +16,6 @@
   "thig8.1:3.4": "И дэвы, Владеющие творениями других, —",
   "thig8.1:4.1": "Все они под гнётом воззрений о самости, ",
   "thig8.1:4.2": "Самости не превзойдя; ",
-  "thig8.1:4.3": "Бродят из существования в существование, "
+  "thig8.1:4.3": "Бродят из существования в существование, ",
+  "thig8.1:4.4": "В тисках рождений и смертей блуждают. "
 }
