--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
@@ -18,5 +18,6 @@
   "thig8.1:4.2": "Самости не превзойдя; ",
   "thig8.1:4.3": "Бродят из существования в существование, ",
   "thig8.1:4.4": "В тисках рождений и смертей блуждают. ",
-  "thig8.1:5.1": "Весь мир в огне, "
+  "thig8.1:5.1": "Весь мир в огне, ",
+  "thig8.1:5.2": "Он пламенем объят. "
 }
