--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
@@ -21,5 +21,6 @@
   "thig8.1:5.1": "Весь мир в огне, ",
   "thig8.1:5.2": "Он пламенем объят. ",
   "thig8.1:5.3": "Весь мир горит, ",
-  "thig8.1:5.4": "Весь мир пылает. "
+  "thig8.1:5.4": "Весь мир пылает. ",
+  "thig8.1:6.1": "В бестрепетной, непревзойдённой Дхамме, "
 }
