--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
@@ -25,5 +25,6 @@
   "thig8.1:6.1": "В бестрепетной, непревзойдённой Дхамме, ",
   "thig8.1:6.2": "Неведомой глупцам, ",
   "thig8.1:6.3": "Будда наставлял меня, ",
-  "thig8.1:6.4": "Мой ум возрадовался ей. "
+  "thig8.1:6.4": "Мой ум возрадовался ей. ",
+  "thig8.1:7.1": "Слова его услышав, "
 }
