--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
@@ -28,5 +28,6 @@
   "thig8.1:6.4": "Мой ум возрадовался ей. ",
   "thig8.1:7.1": "Слова его услышав, ",
   "thig8.1:7.2": "Учению обрадовалась я. ",
-  "thig8.1:7.3": "Три знания открылись для меня, "
+  "thig8.1:7.3": "Три знания открылись для меня, ",
+  "thig8.1:7.4": "Заветы Татхагаты мной исполнены всецело. "
 }
