--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
@@ -30,5 +30,6 @@
   "thig8.1:7.2": "Учению обрадовалась я. ",
   "thig8.1:7.3": "Три знания открылись для меня, ",
   "thig8.1:7.4": "Заветы Татхагаты мной исполнены всецело. ",
-  "thig8.1:8.1": "Всё наслаждение сокрушено, "
+  "thig8.1:8.1": "Всё наслаждение сокрушено, ",
+  "thig8.1:8.2": "Пучина тьмы рассеяна, "
 }
