--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
@@ -32,5 +32,6 @@
   "thig8.1:7.4": "Заветы Татхагаты мной исполнены всецело. ",
   "thig8.1:8.1": "Всё наслаждение сокрушено, ",
   "thig8.1:8.2": "Пучина тьмы рассеяна, ",
-  "thig8.1:8.3": "Об этом зная, "
+  "thig8.1:8.3": "Об этом зная, ",
+  "thig8.1:8.4": "Тебя я одолела, Лютый!» "
 }
