--- a/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
@@ -18,6 +18,6 @@
   "iti95:5.4": "e trascendono la sofferenza senza residui. ",
   "iti95:6.1": "Quei nobili luminari, ",
   "iti95:6.2": "quei saggi che comprendono correttamente (nel modo giusto) ",
-  "iti95:6.3": "con la conoscenza superiore della distruzione della nascita ",
+  "iti95:6.3": "l’eliminazione della nascita con la superiore conoscenza, ",
   "iti95:6.4": "non ritornano più a nuova esistenza.” "
 }
