--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti104:2.1": "Cercatore, qualsiasi cercatore dalla perfetta virtù, samādhi, saggezza, liberazione, conoscenza e visione della liberazione, che è un oratore, istruttore, maestro, che esorta/incoraggia, ispira e delizia, è un insegnante competente del buon Dhamma. Io vi dico che vedere, ",
+  "iti104:2.1": "Cercatori, prendiamo il caso ci sia un cercatore dalla perfetta virtù, samādhi, saggezza, liberazione, conoscenza e visione della liberazione, che è un oratore, istruttore, maestro, che esorta/incoraggia, ispira e delizia, è un insegnante competente del buon Dhamma. Io vi dico che vedere, ",
   "iti104:2.2": "ascoltare, ",
   "iti104:2.3": "visitare, ",
   "iti104:2.4": "stare vicino / servire ",
