--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti104:2.8": "Perché i cercatori che servono, accompagnano e stanno vicini a persone di questo tipo, se hanno ancora qualcosa di incompleto per quanto riguarda virtù, samādhi, saggezza, liberazione, conoscenza e visione della liberazione, la portano a compimento tramite la coltivazione. ",
   "iti104:2.9": "Cercatori di questo tipo sono chiamati maestri, capi, che hanno abbandonato i conflitti, rimosso l’oscurità, portatori di luce, creatori di radiosità, portano la torcia, creatori di luminosità, nobili, che hanno visione. ",
   "iti104:3.1": "Questa è la condizione di chi arreca gioia, ",
-  "iti104:3.2": "è di quelli che conoscono ",
+  "iti104:3.2": "ha conoscenza ",
   "iti104:3.3": "ovvero di quello che si sono completati (maturi spiritualmente) ",
   "iti104:3.4": "Nobili, vivono di Dhamma, * ",
   "iti104:4.1": "rendono chiaro il buon Dhamma ",
