--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti104:2.9": "Cercatori di questo tipo sono chiamati maestri, capi, che hanno abbandonato i conflitti, rimosso l’oscurità, portatori di luce, creatori di radiosità, portano la torcia, creatori di luminosità, nobili, che hanno visione. ",
   "iti104:3.1": "Questa è la condizione di quelli che arrecano gioia, ",
   "iti104:3.2": "hanno conoscenza ",
-  "iti104:3.3": "e si sono completati (maturi spiritualmente) ",
+  "iti104:3.3": "e si sono completati spiritualmente; (maturi spiritualmente) ",
   "iti104:3.4": "Nobili, vivono di Dhamma, * ",
   "iti104:4.1": "rendono chiaro il buon Dhamma ",
   "iti104:4.2": "creatori di luminosità che illuminano ",
