--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -12,7 +12,7 @@
   "iti104:3.2": "hanno conoscenza ",
   "iti104:3.3": "e si sono completati spiritualmente; (maturi spiritualmente) ",
   "iti104:3.4": "Nobili, vivono di Dhamma, * ",
-  "iti104:4.1": "rendono chiaro il buon Dhamma ",
+  "iti104:4.1": "e rendono chiaro il buon Dhamma ",
   "iti104:4.2": "creatori di luminosità che illuminano ",
   "iti104:4.3": "portatori di luce saggi ",
   "iti104:4.4": "dotati di visione, che hanno abbandonato il conflitto. ",
