--- a/translation/it/soma/sutta/kn/iti/vagga3/iti23_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga3/iti23_translation-it-soma.json
@@ -9,6 +9,6 @@
   "iti23:3.4": "si assicura ambedue i tipi di benessere: ",
   "iti23:4.1": "benessere in questa vita ",
   "iti23:4.2": "e nelle prossime. ",
-  "iti23:4.3": "La persona avveduta che comprende che cosa porta benessere, ",
+  "iti23:4.3": "La persona avveduta (oculata) che comprende che cosa porta benessere, ",
   "iti23:4.4": "è chiamata saggia.” "
 }
