--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -15,7 +15,7 @@
   "iti104:4.1": "e rendono chiaro il buon Dhamma ",
   "iti104:4.2": "luminari che illuminano ",
   "iti104:4.3": "sorgenti di luce, avveduti (oculati) ",
-  "iti104:4.4": "dotati di visione, che hanno abbandonato il conflitto. ",
+  "iti104:4.4": "dotati di visione, stroncatori del conflitto. ",
   "iti104:5.1": "per chiunque avendo ascoltato l’insegnamento ",
   "iti104:5.2": "comprendendo correttamente (nel modo giusto) , * ",
   "iti104:5.3": "* ",
