--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -17,7 +17,7 @@
   "iti104:4.3": "sorgenti di luce, avveduti (oculati) ",
   "iti104:4.4": "dotati di visione, stroncatori di conflitti ",
   "iti104:5.1": "per chiunque ascolta il loro insegnamento, ",
-  "iti104:5.2": "comprendendo correttamente (nel modo giusto) , * ",
+  "iti104:5.2": "quei saggi che comprendono correttamente (nel modo giusto) ",
   "iti104:5.3": "* ",
   "iti104:5.4": "* "
 }
