--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -19,5 +19,5 @@
   "iti104:5.1": "per chiunque ascolta il loro insegnamento, ",
   "iti104:5.2": "quei saggi che comprendono correttamente (nel modo giusto) ",
   "iti104:5.3": "l’eliminazione della nascita con la superiore conoscenza, ",
-  "iti104:5.4": "* "
+  "iti104:5.4": "non ritornano più a nuova esistenza.” "
 }
