--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti104:2.8": "Perché i cercatori che servono, accompagnano e stanno vicini a persone di questo tipo, se hanno ancora qualcosa di incompleto per quanto riguarda virtù, samādhi, saggezza, liberazione, conoscenza e visione della liberazione, la portano a compimento tramite la coltivazione. ",
   "iti104:2.9": "Cercatori di questo tipo sono chiamati maestri, guide, stroncatori di conflitti, dissipatori dell’oscurità, sorgenti di luce, creatori di radiosità, portatori della torcia, luminari, nobili, dotati di vista. ",
   "iti104:3.1": "Questo è causa di gioia ",
-  "iti104:3.2": "per quelli che conoscono ",
+  "iti104:3.2": "per quelli che conoscono, ",
   "iti104:3.3": "e si sono completati spiritualmente; (maturi spiritualmente) ",
   "iti104:3.4": "Nobili, vivono di Dhamma, * ",
   "iti104:4.1": "e rendono chiaro il buon Dhamma ",
