--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -14,7 +14,7 @@
   "iti104:3.4": "e hanno coltivato se stessi.* ",
   "iti104:4.1": "Luminari che illuminano ",
   "iti104:4.2": "e rendono chiaro il buon Dhamma ",
-  "iti104:4.3": "sorgenti di luce, avveduti (oculati) ",
+  "iti104:4.3": "Sorgenti di luce, avveduti (oculati), ",
   "iti104:4.4": "dotati di visione, stroncatori di conflitti. ",
   "iti104:5.1": "Dopo aver ascoltato il loro insegnamento, ",
   "iti104:5.2": "quei saggi che comprendono correttamente (nel modo giusto) ",
