--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti104:2.9": "Cercatori di questo tipo sono chiamati maestri, guide, stroncatori di conflitti, dissipatori dell’oscurità, sorgenti di luce, creatori di radiosità, portatori della torcia, luminari, nobili, dotati di vista. ",
   "iti104:3.1": "Questa è una condizione apportatrice di gioia ",
   "iti104:3.2": "per coloro che hanno conoscenza ",
-  "iti104:3.3": "vivere secondo il Dhamma dei Nobili, ",
+  "iti104:3.3": "hanno coltivato se stessi, ",
   "iti104:3.4": "e hanno coltivato se stessi.* ",
   "iti104:4.1": "Luminari che illuminano ",
   "iti104:4.2": "e rendono chiaro il buon Dhamma. ",
