--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -11,7 +11,7 @@
   "iti104:3.1": "Questa è una condizione apportatrice di gioia ",
   "iti104:3.2": "per coloro che hanno conoscenza ",
   "iti104:3.3": "hanno coltivato se stessi, ",
-  "iti104:3.4": "e hanno coltivato se stessi.* ",
+  "iti104:3.4": "vivono secondo il Dhamma dei Nobili, ",
   "iti104:4.1": "Luminari che illuminano ",
   "iti104:4.2": "e rendono chiaro il buon Dhamma. ",
   "iti104:4.3": "Sorgenti di luce, avveduti (oculati), ",
