--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti107:2.1": "Cercatori, bramini e laici vi sono molto utili e vi sostengono con offerte di stoffa, cibo, alloggi, medicine, tonici e altri requisiti. ",
+  "iti107:2.1": "Cercatori, brahmani e laici vi sono molto utili e vi sostengono con offerte di stoffa, cibo, alloggi, medicine, tonici e altri requisiti. ",
   "iti107:2.2": "Anche voi siete molto utili ai bramini e ai laici, perché gli insegnate un Dhamma che è bello all’inizio, durante, e dopo, sia nel significato che nella forma, e rivela un tipo di vita spirituale completamente perfetta e pura. ** ",
   "iti107:2.3": "In questo modo si vive la vita spirituale, appoggiandosi gli uni agli altri, per attraversare il diluvio e mettere una fine alla sofferenza una volta per tutte. ",
   "iti107:3.1": "Sia che vivono con una casa, o senza casa, ",
