--- a/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti109:2.4": "E allora quella persona, dopo aver sentito quelle parole da quella persona, con mani e piedi farebbe uno sforzo controcorrente. ",
   "iti109:3.1": "Cercatori, simile a questa persona vi ho offerto un insegnamento per il vostro bene ",
   "iti109:3.2": "e questo qui è il significato: ",
-  "iti109:3.3": "‘la corrente di un fiume,’ è sinonimo di questa arsura. ",
+  "iti109:3.3": "‘la corrente di un fiume,’ è sinonimo di questa sete. ",
   "iti109:4.1": "‘piacevole e bello’ è sinonimo dei sei sensi interni. ",
   "iti109:5.1": "‘Sotto c’è un lago’ è sinonimo delle cinque catene inferiori. ",
   "iti109:6.1": "‘Il pericolo delle onde’ è sinonimo di questa rabbia e agitazione. ",
