--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -18,7 +18,7 @@
   "iti106:5.3": "con cibo, bevande, ",
   "iti106:5.4": "tessuto, alloggio, ",
   "iti106:5.5": "massaggi, lavaggi ",
-  "iti106:5.6": "e bagni ai piedi. ",
+  "iti106:5.6": "e pediluvi. ",
   "iti106:6.1": "Per via della sua cura ",
   "iti106:6.2": "a madre e padre, i saggi ",
   "iti106:6.3": "lo lodano in questa vita, ",
