--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -12,7 +12,7 @@
   "iti106:4.1": "Madre e padre sono detti essere Brahma, ",
   "iti106:4.2": "i primi insegnanti, ",
   "iti106:4.3": "degni di offerte dai figli, ",
-  "iti106:4.4": "compassionevoli con la prole. ",
+  "iti106:4.4": "sono colmi di compassione per la loro prole. ",
   "iti106:5.1": "Per questo il saggio gli renderebbe omaggio ",
   "iti106:5.2": "e li tratterebbe con rispetto, ",
   "iti106:5.3": "con cibo, bevande, ",
