--- a/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti106_translation-it-soma.json
@@ -21,6 +21,6 @@
   "iti106:5.6": "e pediluvi. ",
   "iti106:6.1": "Per via della sua cura ",
   "iti106:6.2": "a madre e padre, ",
-  "iti106:6.3": "lo lodano in questa vita, ",
+  "iti106:6.3": "viene lodato dai saggi in questa vita, ",
   "iti106:6.4": "e poi si gode il paradiso dopo la morte (nell’aldilà). "
 }
