--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -2,7 +2,7 @@
   "iti107:2.1": "Cercatori, brahmani e laici vi sono molto utili e vi sostengono con offerte di stoffa, cibo, alloggi, medicine, tonici e altri requisiti. ",
   "iti107:2.2": "Anche voi siete molto utili ai brahmani e ai laici, perché gli insegnate un Dhamma che è bello all’inizio, durante e dopo, sia nel significato che nella forma, e rivela un tipo di vita spirituale completamente perfetta e pura. ** ",
   "iti107:2.3": "In questo modo si vive la vita spirituale, appoggiandosi gli uni agli altri, per attraversare il diluvio e mettere una fine alla sofferenza una volta per tutte. ",
-  "iti107:3.1": "Chi vive in casa e chi vive senza casa, ",
+  "iti107:3.1": "Quelli che hanno una dimora e quelli senza dimora ",
   "iti107:3.2": "entrambi dipendono l’uno dall’altro, ",
   "iti107:3.3": "e hanno successo nel buon Dhamma, ",
   "iti107:3.4": "suprema tregua da ogni giogo** ",
