--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti107:3.2": "entrambi dipendendo l’uno dall’altro ",
   "iti107:3.3": "hanno successo nel buon Dhamma, ",
   "iti107:3.4": "suprema tregua da ogni giogo.** ",
-  "iti107:4.1": "Da quelli che vivono con una casa, ",
+  "iti107:4.1": "Da quelli che hanno una dimora, ",
   "iti107:4.2": "i senza casa accettano il saio, ",
   "iti107:4.3": "i requisiti e l’alloggio, ",
   "iti107:4.4": "per proteggere dal pericolo. ",
